--- a/.classpath
+++ b/.classpath
@@ -16,19 +16,19 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/RDF Backend "/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Standard Extensions Library"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/web-protege-who-swrl-editor"/>
-	<classpathentry kind="lib" path="/web-protege-who-swrl-editor/war/WEB-INF/lib/commons-codec-1.2.jar"/>
-	<classpathentry kind="lib" path="/web-protege-who-swrl-editor/war/WEB-INF/lib/commons-httpclient-3.1.jar"/>
-	<classpathentry kind="lib" path="/web-protege-who-swrl-editor/war/WEB-INF/lib/gwt-crypto-1.0.3.jar"/>
-	<classpathentry kind="lib" path="/web-protege-who-swrl-editor/war/WEB-INF/lib/gwt-incubator-3.jar"/>
-	<classpathentry kind="lib" path="/web-protege-who-swrl-editor/war/WEB-INF/lib/gwt-servlet.jar"/>
-	<classpathentry kind="lib" path="/web-protege-who-swrl-editor/war/WEB-INF/lib/gwtext.jar"/>
-	<classpathentry kind="lib" path="/web-protege-who-swrl-editor/war/WEB-INF/lib/icd.jar"/>
-	<classpathentry kind="lib" path="/web-protege-who-swrl-editor/war/WEB-INF/lib/log4j.jar"/>
-	<classpathentry kind="lib" path="/web-protege-who-swrl-editor/war/WEB-INF/lib/mail.jar"/>
-	<classpathentry kind="lib" path="/web-protege-who-swrl-editor/war/WEB-INF/lib/openid4java-0.9.5.jar"/>
-	<classpathentry kind="lib" path="/web-protege-who-swrl-editor/war/WEB-INF/lib/swrlEditor.jar"/>
-	<classpathentry kind="lib" path="/web-protege-who-swrl-editor/war/WEB-INF/lib/xpp3-1.1.3.4.C.jar"/>
-	<classpathentry kind="lib" path="/web-protege-who-swrl-editor/war/WEB-INF/lib/xstream-1.3.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/wpswrleditor2"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/commons-codec-1.2.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/commons-httpclient-3.1.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/gwt-crypto-1.0.3.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/gwt-incubator-3.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/gwt-servlet.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/gwtext.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/icd.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/log4j.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/mail.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/openid4java-0.9.5.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/swrlEditor.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/xpp3-1.1.3.4.C.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/xstream-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
