--- a/.classpath
+++ b/.classpath
@@ -25,8 +25,77 @@
 	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/log4j.jar"/>
 	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/mail.jar"/>
 	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/openid4java-0.9.5.jar"/>
-	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/xpp3-1.1.3.4.C.jar"/>
-	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/xstream-1.3.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/WP.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/antlr-2.7.5.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/arq-extra.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/arq.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/axis.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/bioportal-services-lib.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/bioportalReference.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/change-management.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/chat.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/commons-discovery-0.4.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/commons-fileupload-1.2.2.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/commons-io-2.1.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/commons-lang-2.0.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/concurrent.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/defaultAlgorithmsSwrleditor.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/edtftpj-1.5.2.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/ekitspell.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/gwt-servlet.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/icu4j.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/iri.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/jcalendar.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/jdom.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/jena.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/jep-2.4.0.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/jess.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/JGo.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/JGoLayout.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/json.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/jsr94.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/junit.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/kazuki.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/log4j-1.2.12.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/looks.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/lucene-core.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/luceneQueryPlugin.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/orphanNodesAlg.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/owlsyntax.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/phonetix.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/protege-collab.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/protege-owl.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/protege.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/rdf-api.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/rdf-backend.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/standard-extensions.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/swingx-1.0.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/swrl-drools-bridge.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/swrl-jess-bridge.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/unicode_panel.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/UpAndDown.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/xercesImpl.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/xml-apis.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/antlr-runtime-3.3.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/drools-compiler-5.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/drools-core-5.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/icu4j_3.4.4.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/jena-dig.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/knowledge-api-5.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/knowledge-internal-api-5.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/mvel2-2.1.0.drools8.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/org.eclipse.jdt.core_3.7.0.v_B61.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/slf4j-api-1.5.8.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/slf4j-log4j12-1.5.8.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/stax-api-1.0.1.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/swrl-api.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/swrl-tab-p3.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/wstx-asl-3.2.9.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/xpp3_min-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/xstream-1.3.1.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/xstream.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/owl-portability-p3.jar"/>
+	<classpathentry kind="lib" path="/wpswrleditor2/war/WEB-INF/lib/owl-portability.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
